objects/Field_Ids__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Contract_End_Date_Opportunity__c</fullName>
        <label>Contract End Date (Opportunity)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSU_Location_Opportunity__c</fullName>
        <label>FSU Location (Opportunity)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCSC_State_Opportunity__c</fullName>
        <label>HCSC State (Opportunity)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Effective_Date_Opportunity__c</fullName>
        <label>Requested Effective Date (Opportunity)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field Ids</label>
</CustomObject>